--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -34,7 +34,14 @@ jobs:
         with:
           go-version: "1.25.1"
       
+      - name: Install staticcheck
+        run: go install honnef.co/go/tools/cmd/staticcheck@latest
+
       - name: Check formating
         run: test -z $(go fmt ./...)
+
+      - name: Check linting
+        run: test -z $(staticcheck ./...)
+
 
     
