update ci workflow

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -41,7 +41,7 @@ jobs:
         run: test -z $(go fmt ./...)
 
       - name: Check linting
-        run: test -z $(staticcheck ./...)
+        run: staticcheck ./...
 
 
     
