--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,9 +18,15 @@ jobs:
         with:
           go-version: "1.25.1"
 
+      - name: Install gosec
+        run: go install github.com/securego/gosec/v2/cmd/gosec@latest
+
       - name: Run unit tests
         run: go test -cover ./...
-  
+
+      - name: Gosec test
+        run: gosec ./...
+
   style:
     name: Style
     runs-on: ubuntu-latest
