--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -9,6 +9,9 @@ jobs:
     name: Deploy
     runs-on: ubuntu-latest
 
+    env:
+      DATABASE_URL: ${{ secrets.DATABASE_URL }}
+
     steps:
       - name: Check out code
         uses: actions/checkout@v4
@@ -17,6 +20,9 @@ jobs:
         uses: actions/setup-go@v5
         with:
           go-version: "1.25.1"
+
+      - name: install Goose
+        run: go install github.com/pressly/goose/v3/cmd/goose@latest 
 
       - name: Build app
         run: ./scripts/buildprod.sh     
@@ -29,11 +35,14 @@ jobs:
       - name: 'Set up Cloud SDK'
         uses: 'google-github-actions/setup-gcloud@v3'
 
-      - name: 'Use gcloud CLI'
-        run: 'gcloud info'
-
       - name: Upload to Artifact Registry
         run: gcloud builds submit --tag us-central1-docker.pkg.dev/notely-473408/notely-ar-repo/notely:latest .
+
+      - name: Run migrations
+        run: ./scripts/migrateup.sh
+
+      - name: Check for credetial leaks
+        run: git diff
 
       - name: Deploy to Cloud Run
         run: gcloud run deploy notely --image us-central1-docker.pkg.dev/notely-473408/notely-ar-repo/notely:latest --region us-central1 --allow-unauthenticated --project notely-473408 --max-instances=4
